# poc_apl

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
backend/: Dockerfile  agent.py  main.py  pyproject.toml  seed_db.py  timescaledb.py
backend/tools/: __init__.py  mdf.py  plots.py  timescale.py
frontend/: Dockerfile  app.py  db.py  pyproject.toml
frontend/.chainlit/: config.toml
frontend/public/: custom.js  theme.json
